methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:3: error: not found: value poseBrosse
  poseBrosse();avance();avance();leveBrosse();
  ^FlowerPot:4: error: not found: value avanec
  droite();avance();droite();avanec();droite();
                             ^FlowerPot:5: error: not found: value poseBrosse
  poseBrosse();avance();avance();leveBrosse();
  ^FlowerPot:7: error: not found: value poseBrosse
  recule();poseBrosse();leveBrosse();droite();recule()
           ^