methods.flowerpot.FlowerPot.scala.code
def motif(c:Color){
  setCouleurBrosse(c);
  poseBrosse();avance();avance();leveBrosse();
  droite();avance();droite();avanec();droite();
  poseBrosse();avance();avance();leveBrosse();
  setCouleurBrosse(Color.yellow)
  recule();poseBrosse();leveBrosse();droite();recule()
}

def growFlowers(){
  motif(Color.red);avance();avance();avance();avance();
  motif(Color.cyan);droite();avance();avance();droite();
  motif(Color.orange);gauche();avance();avance();gauche();
  motif(Color.green);recule();recule();recule();recule();
  motif(Color.pink);
}